fix: allowed contact names to wrap

--- a/style_udamg_v1.css
+++ b/style_udamg_v1.css
@@ -479,9 +479,8 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="tel"]:focus,
     font-weight: 800;
     margin: 0;
     color: #fff;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    line-height: 1.2;
+    word-break: break-word; /* Permet au nom de s'afficher sur plusieurs lignes si besoin */
 }
 
 .contact-card h4 span {
